# openrein-contrib

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: build.yml
addin/powerpoint/: manifest.xml  taskpane.css  taskpane.html  taskpane.js
docs/: playwright.md  powerpoint.md
openrein/contrib/: __init__.py
openrein/contrib/skills/: playwright.md  powerpoint.md
openrein/contrib/tags/: data.json  git.json  office.json  web.json
openrein/contrib/tools/: __init__.py  playwright.py  powerpoint.py
