[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openrein-contrib"
version = "0.1.0"
description = "Community Skills and Tools for openrein"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["llm", "agent", "openrein", "skills", "tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/kurt01124/openrein-contrib"

[tool.setuptools.packages.find]
namespaces = true
