[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrein-contrib"
version = "0.6.2"
description = "Community Skills and Tools for openrein"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["openrein>=0.6.2"]
license = {text = "MIT"}
keywords = ["llm", "agent", "openrein", "skills", "tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40"]

[project.urls]
Repository = "https://github.com/kurt01124/openrein-contrib"

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
"openrein.contrib" = ["skills/*.md"]
